--- a/basic_website/Grid Web/simple-grid.css
+++ b/basic_website/Grid Web/simple-grid.css
@@ -277,18 +277,29 @@ table,td, th{
     width: 75%;
     max-width: 60rem;
   }
+  .col-4 ul{
+    margin-left: -30px;
+  }
   .col-4 img{
-    width: 100%;
+    width: 110%;
   }
   .table img {
     margin-top: 30px;
+    margin-left: -75px;
+  }
+  h5{
+    margin-bottom: -20px;
+  }
+  .forlang{
+    margin-top: -30px;
   }
   .six{
     font-size: 17px;
-    margin-left: 30px;
     margin-bottom: -10px;
   }
   .historical {
-    margin-bottom: -40px;
+    margin-top: -2px;
+    margin-bottom: -35px;
+    font-size: 30px;
   }
 }
