--- a/basic_website/Html & Css/style.css
+++ b/basic_website/Html & Css/style.css
@@ -162,12 +162,16 @@ h3{
   margin-bottom: 15px;
 }
 p{
-  font-size: 10.5px;
+  font-size: 9px;
 }
 h4{
   margin-top: 15px;
   margin-left: -20px;
   margin-bottom: 10px;
+}
+h6{
+  font-size: 20px;
+  text-align: center;
 }
 }
 /*MOBILE SMALL*/
@@ -217,10 +221,10 @@ h4{
   }
   .box2{
     margin-top: 20px;
-    margin-left: -140px;
+    margin-left: -80px;
   }
   p {
-    font-size: 14.5px;
+    font-size: 9px;
   }
   .box3 img{
     height:200px;
@@ -233,7 +237,7 @@ h4{
   .box4 {
     margin-top: -40px;
     width: 50%;
-    margin-left: -140px;
+    margin-left: -120px;
   }
 
   .box5{
@@ -266,6 +270,10 @@ h4{
   }
   .box8,.box10,.box12{
     margin-top: 45px;
+  }
+  h6{
+    font-size: 30px;
+    text-align: center;
   }
 }
 
@@ -301,13 +309,76 @@ h4{
     margin-bottom: -5px;
   }
   p{
-    font-size: 10.5px;
+    font-size: 7px;
   }
   h4{
     margin-top: 15px;
     margin-left: -20px;
     margin-bottom: 10px;
   }
+  }
+  /*Respondsive on Laptop Large*/
+  @media (min-width:1025px){
+    .box1, .box2{
+      height:200px;
+      font-size: 25px;
+    }
+    .box2{
+      margin-top: 20px;
+      margin-left: -160px;
+    }
+    p {
+      font-size: 13px;
+    }
+    .box3 img{
+      height:200px;
+      width: 66.67%;
+    }
+    .box3{
+      height:200px;
+      width: 50%;
+    }
+    .box4 {
+      margin-top: -40px;
+      width: 50%;
+      margin-left: -160px;
+    }
+
+    .box5{
+      width: 100%;
+      height: 200px;
+    }
+    .box6{
+      width: 100%;
+      height: 70px;
+    }
+    h3{
+        padding-top: 20px;
+    }
+    .box7, .box8, .box9, .box10, .box11, .box12{
+      width: 16.6666667%;
+      height:250px;
+    }
+
+    h3{
+      margin-top:15px;
+    }
+    .place{
+      margin-top: -5px;
+      margin-bottom: 15px;
+    }
+    h4{
+      margin-top: 15px;
+      margin-left: -20px;
+      margin-bottom: 10px;
+    }
+    .box8,.box10,.box12{
+      margin-top: 45px;
+    }
+    h6{
+      font-size: 30px;
+      text-align: center;
+    }
   }
 
 /*Responsive on 4K screen*/
@@ -320,7 +391,8 @@ h4{
     text-align: center;
   }
   .box2 img{
-    width: 400px;
+    width: 220px;
+    margin-left: -30px;
   }
 
   .box3 img {
@@ -342,13 +414,13 @@ h4{
     font-size: 50px;
   }
   h3{
-    font-size: 50px;
-    margin-top: 20px;
-    margin-left: 20px;
+    font-size: 20px;
+    margin-left: -80px;
+    margin-top: 40px;
   }
   p{
-    font-size: 28px;
-    margin-left: 20px;
+    font-size: 23px;
+    margin-left: -80px;
   }
   table {
     height: 250px;
@@ -356,8 +428,12 @@ h4{
   th{
     font-size: 30px;
   }
-  td, h5, h6{
+  td, h5{
     font-size: 30px;
+  }
+  h6{
+    font-size: 50px;
+    text-align: center;
   }
   .box5{
     height: 500px;
