--- a/basic_website/Html & Css/style.css
+++ b/basic_website/Html & Css/style.css
@@ -375,7 +375,7 @@ h6{
 
     h3{
       margin-top:15px;
-      margin-top: -61px;
+      margin-left: -61px;
     }
     .place{
       margin-top: -5px;
