--- a/basic_website/Html & Css/style.css
+++ b/basic_website/Html & Css/style.css
@@ -117,14 +117,14 @@ h6{
 /*Respondsive Tablet*/
 @media (max-width:768px) {
   .box3, .box4, .box5, .box6{
-    width: 100%;
+    width: 99%;
   }
   .box3{
     height: 200px;
   }
   .box4{
     width:60%;
-    height: 170px;
+    height: 180px;
   }
   .box2{
     margin-top: 25px;
@@ -141,9 +141,6 @@ h6{
   .box10 img{
   width: 80%;
   margin-left: 25px;
-  }
-  .box8, .box10, .box12{
-    margin-top: 50px;
   }
   .box9, .box10{
     width: 50%;
@@ -162,12 +159,31 @@ h3{
   margin-bottom: 15px;
 }
 p{
-  font-size: 9px;
+  font-size: 14px;
 }
-h4{
-  margin-top: 15px;
-  margin-left: -20px;
-  margin-bottom: 10px;
+.Bokaap{
+    margin-left: 327px;
+    padding-top: 529px;
+    margin-bottom: 5px;
+}
+.city{
+    margin-left: 327px;
+    padding-top: 5px;
+    margin-bottom: 7px;
+}
+.District{
+  margin-left: 327px;
+  padding-top: 5px;
+  margin-bottom: 7px;
+}
+.box8{
+
+}
+.box10{
+
+}
+.box12{
+
 }
 h6{
   font-size: 20px;
@@ -183,11 +199,15 @@ h6{
   }
   .box2{
     margin-top: 20px;
-    margin-left: -80px;
+    margin-left: -123px;
+  }
+  h2{
+    font-size: 30px;
+    margin-bottom: 5px;
   }
   p {
-    font-size: 9px;
-    margin-left: -31px;
+    font-size: 16px;
+    margin-left: -53px;
   }
   .box3 img{
     height:200px;
@@ -196,18 +216,20 @@ h6{
   .box3{
     height:200px;
     width: 50%;
+    font-family: fantasy;
   }
   .box3, .box3 img{
     padding-bottom:30px;
   }
   .box4 {
-    margin-top: -40px;
+    margin-top: 46px;
     width: 50%;
-    margin-left: -120px;
+    margin-left: -94px;
+    height: 212px;
   }
 
   .box5{
-    width: 100%;
+    width: 99%;
     height: 200px;
   }
   .box6{
@@ -219,8 +241,9 @@ h6{
       margin-left: -30px;
   }
   .box7, .box8, .box9, .box10, .box11, .box12{
-    width: 16.6666667%;
+    width: 15.5%;
     height:250px;
+    margin: 5px;
   }
 
   h3{
@@ -230,13 +253,32 @@ h6{
     margin-top: -5px;
     margin-bottom: 15px;
   }
-  h4{
-    margin-top: 15px;
-    margin-left: -20px;
-    margin-bottom: 10px;
+  .Bokaap{
+    padding-top: 469px;
+    margin-bottom: 5px;
+    margin-left: 124px;
+  }
+  .city{
+    margin-bottom: 5px;
+    margin-top: -23px;
+    margin-left: 466px;
+  }
+  .District{
+    margin-bottom: 5px;
+    margin-top: -23px;
+    margin-left: 777px;
+  }
+  .box8{
+
+  }
+  .box10{
+
+  }
+  .box12{
+
   }
   .box8,.box10,.box12{
-    margin-top: 45px;
+
   }
   h6{
     font-size: 30px;
@@ -247,15 +289,13 @@ h6{
 /*Mobile Meduim */
 @media (max-width:425px) {
   .box2 img{
-    width: 100%;
+  width: 90%;
   }
   .box7, .box8, .box9, .box10, .box11, .box12{
     height: 165px;
   }
   .box8, .box10, .box12{
-    margin-top: 45px;
     width: 50%;
-
   }
   .box8 img, .box10 img, .box12 img{
     width: 80%;
@@ -263,11 +303,12 @@ h6{
 
   }
   .box4{
-    height: 175px;
+    height: 407px;
   }
   .box5{
     margin-bottom: 20px;
     height: 190px;
+    width: 98%;
   }
   h3{
     margin-bottom: 2px;
@@ -277,34 +318,73 @@ h6{
     margin-bottom: -5px;
   }
   p{
-    font-size: 8px;
+    font-size: 15.6px;
   }
-  h4{
-    margin-top: 15px;
-    margin-left: -20px;
-    margin-bottom: 10px;
+  .Bokaap{
+    padding-top: 788px;
+    margin-bottom: 5px;
+    margin-left: 173px;
+  }
+  .city{
+    margin-bottom: 5px;
+    margin-left: 173px;
+  }
+  .District{
+    margin-bottom: 5px;
+    margin-left: 145px;
+  }
+  .box8{
+
+  }
+  .box9{
+    width: 46%;
+    margin-right: 10px;
+  }
+  .box10{
+
+  }
+  .box12{
+
   }
   }
-  /*MOBILE SMALL*/
-  @media (max-width:320px) {
+  @media (max-width:375px) {
     .box2 img{
-      width: 100%;
+      width: 95%;
+    }
+    .Bokaap{
+    padding-top: 786px;
+    margin-left: 152px;
+    }
+    .box5{
+    width: 97%;
+    }
+    .city{
+      margin-left: 149px;
+    }
+    .District{
+      margin-left: 98px;
+    }
+    .box8{
+
+    }
+    .box10{
+
+    }
+    .box12{
+
     }
     .box7, .box8, .box9, .box10, .box11, .box12{
       height: 165px;
     }
     .box8, .box10, .box12{
-      margin-top: 45px;
       width: 50%;
-
     }
     .box8 img, .box10 img, .box12 img{
       width: 80%;
       margin-left: 10px;
-
     }
     .box4{
-      height: 175px;
+      height: 396px;
     }
     .box5{
       margin-bottom: 20px;
@@ -317,7 +397,67 @@ h6{
       margin-bottom: -5px;
     }
     p{
-      font-size: 7px;
+      font-size: 14px;
+    }
+    h4{
+      margin-top: 15px;
+      margin-left: -20px;
+      margin-bottom: 10px;
+      margin-top: 5px;
+    }
+  }
+  /*MOBILE SMALL*/
+  @media (max-width:320px) {
+    .box2 img{
+      width: 95%;
+    }
+    .Bokaap{
+    padding-top: 786px;
+    margin-left: 129px;
+    }
+    .box5{
+    width: 97%;
+    }
+    .city{
+      margin-left: 129px;
+    }
+    .District{
+      margin-left: 98px;
+    }
+    .box8{
+
+    }
+    .box10{
+
+    }
+    .box12{
+
+    }
+    .box7, .box8, .box9, .box10, .box11, .box12{
+      height: 165px;
+    }
+    .box8, .box10, .box12{
+      width: 50%;
+    }
+    .box8 img, .box10 img, .box12 img{
+      width: 80%;
+      margin-left: 10px;
+    }
+    .box4{
+      height: 396px;
+    }
+    .box5{
+      margin-bottom: 20px;
+      height: 190px;
+    }
+    h3{
+      margin-bottom: 15px;
+    }
+    .place{
+      margin-bottom: -5px;
+    }
+    p{
+      font-size: 13.5px;
     }
     h4{
       margin-top: 15px;
@@ -337,7 +477,7 @@ h6{
       margin-left: -160px;
     }
     p {
-      font-size: 13px;
+      font-size: 16px;
       margin-left: -62px;
     }
     .box3 img{
@@ -352,13 +492,14 @@ h6{
       padding-bottom:30px;
     }
     .box4 {
-      margin-top: -40px;
       width: 50%;
       margin-left: -160px;
+      height: 218px;
+      margin-top: 43px;
     }
 
     .box5{
-      width: 100%;
+      width: 99.5%;
       height: 200px;
     }
     .box6{
@@ -369,7 +510,7 @@ h6{
         padding-top: 20px;
     }
     .box7, .box8, .box9, .box10, .box11, .box12{
-      width: 16.6666667%;
+      width: 15.5%;
       height:250px;
     }
 
@@ -381,13 +522,23 @@ h6{
       margin-top: -5px;
       margin-bottom: 15px;
     }
-    h4{
-      margin-top: 15px;
-      margin-left: 60px;
-      margin-bottom: 10px;
+    .Bokaap{
+      margin-left: 188px;
     }
-    .box8,.box10,.box12{
-      margin-top: 45px;
+    .city{
+      margin-left: 658px;
+    }
+    .District{
+      margin-left: 1097px;
+    }
+    .box8{
+
+    }
+    .box10{
+
+    }
+    .box12{
+
     }
     h6{
       font-size: 30px;
@@ -405,8 +556,8 @@ h6{
     text-align: center;
   }
   .box2 img{
-    width: 220px;
-    margin-left: -30px;
+    width: 224px;
+    margin-left: -70px;
   }
 
   .box3 img {
@@ -437,8 +588,9 @@ h6{
     margin-top: 40px;
   }
   p{
-    font-size: 23px;
+    font-size: 30px;
     margin-left: -80px;
+    margin-top: 30px;
   }
   table {
     height: 250px;
@@ -455,6 +607,8 @@ h6{
   }
   .box5{
     height: 500px;
+    eight: 500px;
+    width: 99.5%;
   }
   .box6{
     height: 100px;
@@ -462,6 +616,32 @@ h6{
   .box7, .box9, .box11{
     font-size: 30px;
     padding-left: 30px;
+    margin: 22px;
+    width: 14%;
+  }
+  .Bokaap{
+    padding-top: 645px;
+    margin-left: 358px;
+    font-size: 30px;
+  }
+  .city {
+    font-size: 30px;
+    margin-top: -44px;
+    margin-left: 1143px;
+  }
+  .District{
+    font-size: 30px;
+    margin-top: -54px;
+    margin-left: 1939px;
+  }
+  .box8{
+    margin-top: 29px;
+  }
+  .box10{
+    margin-top: 29px;
+  }
+  .box12{
+    margin-top: 29px;
   }
   .box8 img, .box10 img, .box12 img{
     height: 257px;
