--- a/matching_days/stylesheet.css
+++ b/matching_days/stylesheet.css
@@ -18,7 +18,6 @@ body {
     background-image : url("website.jpg");
     background-repeat: no-repeat;
     background-position: center;
-    background-color: aqua;
 }
 
 /* ROOT FONT STYLES */
@@ -317,47 +316,8 @@ p {
         width: 75%;
         max-width: 60rem;
     }
-    /*
-    #inputBox {
-        background-color: black;
-    }
-*/
-/*
-    #addBtn {
-        border: 2px solid darkslategray;
-        width: 230px;
-        height: 60px;
-        background-color: white;
-        /* background: #333447; */
-       /* border-radius: 25px;*/
-/* }*/
-
-/*    #showBtn {
-        border: 2px solid darkslategray;
-        width: 230px;
-        height: 60px;
-        background-color: white;
-        /* background: #333447; */
-        /*border-radius: 25px;*/
-/*    }*/
-
-/*    #showAll {
-        border: 2px solid darkslategray;
-        width: 230px;
-        height: 60px;
-        background-color: white;
-        /* background: #333447; */
-       
-/*    }*/
-
-   #counterAndResetBox {
-        position: relative;
-        right: 80px;
-        bottom: 173px;
-    }
 }
 
-/* ==========================Custom CSS here ===========================================*/
 
 /*******************************CUSTOM CSS ***********************************************/
 
@@ -374,7 +334,7 @@ p {
     justify-content: center;
     align-items: center;
     height: 300px;
-    /* border: 1px solid black; */
+   /*border: 1px solid black;*/
 }
 
 .box {
@@ -385,19 +345,24 @@ p {
 }
 
 .textDays {
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 24px;
     color: black;
+    border-radius: 30%;
+    border: 1px solid black;
+    font-weight: bold;
 }
 
 .match {
     background-color: green;
+    border-radius: 30%;
 }
 
 .nomatch {
     background-color: orange;
+    border-radius: 30%;
 }
 
 .nomatch1 {
     background-color:red;
+    border-radius: 30%;
 }
