--- a/matching_days/stylesheet.css
+++ b/matching_days/stylesheet.css
@@ -32,10 +32,12 @@ body {
 
 h1 {
     font-size: 2.5rem;
+    color: black;
 }
 
 h2 {
     font-size: 2rem;
+    color: black;
 }
 
 h3 {
@@ -55,9 +57,11 @@ h6 {
 }
 
 p {
-    font-size: 1.125rem;
+    font-size: 1.5rem;
     font-weight: 200;
     line-height: 1.8;
+    font-weight: bold;
+    color: black;
 }
 
 .font-light {
