--- a/Shoe_Catalogue/style.css
+++ b/Shoe_Catalogue/style.css
@@ -390,5 +390,5 @@ nav a:hover {
 .card button:hover {
     border: none;
     border-radius: 25px;
-    background-color: lime;
+    background-color:  #6fb6fc;
 }
