--- a/Shoe_Catalogue/style.css
+++ b/Shoe_Catalogue/style.css
@@ -300,14 +300,14 @@ input:active {
 select,
 #new-shoe-price,
 #new-shoe-qty {
-    margin: 0 10px;
+    margin: 0 50px;
     background-color: #6fb6fc;
     width: 200px;
     height: 50px;
     font-size: 20px;
     color:white;
     border: 1px solid black;
-    border-radius: 2px;
+    border-radius: 15px;
 }
 
 #new-shoe-price,
@@ -352,7 +352,7 @@ nav a:hover {
     color: black;
     background-color: #4FA2F5;
     /* border: 1px solid black; */
-    border-radius: 10px;
+    border-radius: 50px;
 }
 
 #nav-col img {
@@ -360,8 +360,6 @@ nav a:hover {
 }
 
 #shoesArea {
-    margin-top: 80px;
-
     width: 99%;
     height: 500px;
     overflow: auto;
@@ -391,4 +389,61 @@ nav a:hover {
     border: none;
     border-radius: 25px;
     background-color:  #6fb6fc;
+}
+.parent {
+    background-color: rgb(253, 254, 255);
+    height: 100%;
+    width: 100%;
+}
+.child {
+    margin-top: -46%;
+    height: 10%;
+    width: 50%;
+    animation: left-to-right 6s ease-in-out forwards infinite;
+    text-align: center;  
+}
+.textmove{
+    color: thistle;
+    animation: color-change 6s ease-in-out forwards infinite;
+}
+@keyframes color-change{
+    0% {
+        transform: translateX(0);
+        color: rgb(71, 237, 255);
+    }
+    25% {
+        transform: translateX(0);
+        color: rgb(255, 83, 71);
+    }
+    25% {
+        transform: translateX(0);
+        color: #6fb6fc;
+    }
+    40% {
+        transform: translateX(0);
+        color: rgb(0, 0, 0);
+    }
+    
+    50%{
+        transform: translateX(100%);
+        color: #6fb6fc;
+    }
+
+    75%{
+        transform: translateX(100%);
+        color: rgb(0, 0, 0);
+    }
+    100%{
+        transform: translateX(100%);
+        color: rgb(71, 237, 255);
+    }
+}
+
+@keyframes left-to-right {
+    0% {
+        transform: translateX(0);
+    }
+    100%{
+        transform: translateX(100%);
+    }
 }
